# Automated-RFP-Generation-Pipeline

./: .gitignore  README.md
backend/: .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml
backend/core/: database.py  gemini.py  models.py  scheduler.py  scraper.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Navbar.tsx  ProposalModal.tsx  TenderCard.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/pages/: AdminPanel.tsx  Dashboard.tsx  ProposalEditor.tsx  Proposals.tsx  SignInPage.tsx  SignUpPage.tsx  TenderDetail.tsx
frontend/src/types/: index.ts
