[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Abhinav Verma",email = "abhinavverma1005@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "playwright (>=1.59.0,<2.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "google-generativeai (>=0.8.6,<0.9.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "apscheduler (>=3.11.2,<4.0.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "google-genai (>=2.0.0,<3.0.0)",
    "playwright-stealth (>=2.0.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
